--- a/glide.html
+++ b/glide.html
@@ -2,352 +2,119 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hammer App – Unlock Your Steam Library!</title>
+  <title>Hammer Steam Library Adder – Unlock Your Steam!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    html, body { margin:0; padding:0; height:100%; overflow-x: hidden; background:#111; scroll-behavior:smooth;}
-    body { font-family: 'Segoe UI', Arial, sans-serif; color: #eaeaea; min-height: 100vh;}
-    /* --- Video Background Animation Styles --- */
-    .video-bg-container {
-      position: fixed; top:0;left:0;width:100vw;height:100vh;
-      overflow: hidden;
-      z-index: -1;
-      pointer-events: none;
-      background: #000;
-      transition: background 1s;
-    }
-    .zoom-video {
-      position: absolute; left:0; top:0; width:100vw; height:100vh; object-fit:cover;
-      filter: brightness(0.5) saturate(1.07);
-      border-radius: 24px;
-      transition: transform 1.2s cubic-bezier(.73,0,.27,1.02), border-radius 1.3s;
-      z-index:1;
-    }
-    .triple-videos {
-      position:absolute;
-      left:0; top:0;
-      width:100vw;height:100vh;display: flex;justify-content: center;align-items: center; gap:3vw;
-      transition:opacity 1.1s;
-      opacity: 0;
-      z-index:2;
-    }
-    .triple-videos video {
-      width: 30vw; min-width: 240px; max-width: 480px;
-      height: 46vh; min-height:120px;
-      object-fit: cover; border-radius:2.4vw;
-      filter: brightness(0.62) saturate(1.08);
-      box-shadow: 0 6px 36px #0009;
-    }
+  html, body { 
+    margin:0; height:100%; overflow-x:hidden; background:#0b0b0b; 
+    font-family:'Segoe UI', Arial, sans-serif;
+    color: #eaeaea;
+  }
+  #hero-bg {
+    position: fixed; left:0; top:0; width:100vw; height:100vh; z-index: 0;
+    overflow:hidden; display: flex; align-items: center; justify-content: center;
+    background: #000; transition: background 1s;
+  }
+  .hero-video {
+    position:absolute; top:50%;
+    width:34vw; height:64vh; min-width:320px; min-height:168px;
+    object-fit:cover; border-radius:2vw;
+    filter: brightness(0.73) saturate(1.07);
+    transition: 
+      left 1.1s cubic-bezier(.8,0,.2,1), 
+      width 1.1s, height 1.1s, 
+      opacity 1.1s, 
+      transform 1.1s cubic-bezier(.75,0,.25,1);
+    box-shadow: 0 6px 36px #0009;
+    opacity: 0.18;
+  }
+  .hero-video.center {
+    left:50vw; z-index:2; opacity:1; 
+    transform: translate(-50%,-50%) scale(1.2);
+  }
+  .hero-video.left  { left:50vw; }
+  .hero-video.right { left:50vw; }
+  .zoom-all .hero-video.left  { left:14vw; opacity:1; transform: translateY(-50%) scale(1);}
+  .zoom-all .hero-video.center{ left:50vw; opacity:1; transform: translate(-50%,-50%) scale(1);}
+  .zoom-all .hero-video.right { left:86vw; opacity:1; transform: translateY(-50%) scale(1);}
+  .overlay-ad {
+    position: absolute; width:100vw; text-align:center; color:#fff;
+    left:0; z-index:4; pointer-events:none; font-weight:bold;
+    text-shadow: 0 4px 32px #000a, 0 1px 8px #222b; letter-spacing:.03em;
+    transition: opacity 0.72s; user-select:none;
+  }
+  .main-ad { top:21vh; font-size:2.25rem; opacity:1;}
+  .lower-ad { bottom:9vh; color:#ffae1a; font-size:1.5rem; opacity:0;}
+  .zoom-all .main-ad {opacity:0;}
+  .zoom-all .lower-ad {opacity:1;}
 
-    /* Overlay Ads */
-    .ad-overlay, .ad-overlay2 {
-      position: absolute; left:0; width: 100vw; text-align: center; z-index: 10;
-      text-shadow: 0 4px 32px #000a, 0 1px 8px #222b;
-      font-weight: bold;
-      pointer-events: none;
-      letter-spacing:0.05em;
-      user-select:none;
-    }
-    .ad-overlay {
-      top: 13vh;
-      color: #fff;
-      font-size: 2.25rem;
-      opacity:1; transition: opacity 1.1s;
-    }
-    .ad-overlay2 {
-      bottom: 13vh;
-      color: #ffae1a;
-      font-size: 2rem;
-      opacity:0; transition:opacity 1.1s;
-    }
-    .show-triple .ad-overlay  {opacity: 0;}
-    .show-triple .ad-overlay2 {opacity: 1;}
-    /* Responsive for mobile */
-    @media (max-width: 800px) {
-      .ad-overlay,.ad-overlay2 { font-size:1.15rem;}
-      .triple-videos video {width:96vw;height:18vh;}
-    }
-    @media (max-width:480px){
-      .ad-overlay, .ad-overlay2 {font-size:1rem;}
-      .triple-videos video {width:97vw;height:15vh;}
-    }
+  /* For content below hero */
+  .site-wrap {
+    position:relative; z-index:2;
+    margin-top:105vh; /* Push everything below the full viewport hero */
+    background: #1a1a1e;
+    min-height:80vh;
+    /* you can remove/add background here as needed */
+  }
+  /* Example headline for your main */
+  .site-wrap h1 {
+    text-align:center; margin:2.5rem 0 1.5rem 0;
+    font-size:2.1rem; letter-spacing: 0.01em; color: #ffd080;
+  }
 
-    /* --- Main Page Styles from previous answer --- */
-    .main {
-      max-width: 700px; margin: 0 auto 24px auto; padding: 46px 18px 14px 18px;
-      background: #23242bdd; border-radius: 14px; box-shadow: 0 4px 24px #0007;
-      position: relative; z-index: 2;
-      margin-top: 100vh; /* pushed down to be under hero video background */
-    }
-    h1 { font-size: 2.1rem; margin-bottom: 10px; color: #ffae1a; font-weight: bold; text-shadow: 0 2px 6px #0005;}
-    h2 { font-size: 1.25rem; color: #f05e16; margin: 16px 0 12px 0; }
-    .features { font-size: 1.08rem; margin: 12px 0 18px 0; padding-left: 15px; }
-    .features li { margin: 10px 0; line-height: 1.45; list-style: "🔥 ";}
-    .cta { display: block; text-align: center; margin: 20px 0 12px 0;}
-    .cta-btn {
-      font-size: 1.1rem;
-      background: linear-gradient(90deg, #f1ac3c 20%, #ff583c 90%);
-      color: #222; border: none; border-radius: 8px; padding: 13px 32px;
-      font-weight: bold; cursor: pointer; margin-top: 10px; letter-spacing: 0.5px;
-      box-shadow: 0 2px 15px #0005; transition: opacity 0.19s;
-    }
-    .cta-btn:hover { opacity: 0.86;}
-    .price { font-size: 1.06rem; color: #ffd15c; margin-top: 8px; }
-    .video-wrap {
-      margin: 25px auto 16px auto; max-width: 560px; width: 100%;
-      border-radius: 10px; overflow: hidden; box-shadow: 0 1.5px 10px #000a;
-      background: #23242bdd;
-      aspect-ratio: 16/9;
-      position: relative;
-    }
-    .video-wrap iframe, .video-wrap embed {
-      width: 100%; height: 100%; border: none;
-      display: block;
-    }
-
-    /* FAQ + Pros/Cons style (copied from previous page) */
-    .faq-section {
-      max-width: 600px; margin: 40px auto 0 auto; border-radius:12px; background: #212227ee;
-      box-shadow: 0 2px 16px #0005; padding: 20px 15px; 
-    }
-    .faq-title { color: #ffaa44; font-size: 1.14rem; margin:0 0 14px 0; padding-left:8px;}
-    .faq-list { }
-    .faq-item { margin-bottom:12px;}
-    .faq-q {
-      width: 100%; text-align:left; background: #26282f; color: #ffe0a0; font-size: 1.07rem; border:none; outline:none; padding:12px; border-radius:8px; cursor:pointer; font-weight: 500; letter-spacing:0.1px; transition: background 0.16s; box-shadow: 0 0.5px 2px #0003;
-    }
-    .faq-q:hover { background: #343750;}
-    .faq-a { max-height: 0; overflow: hidden; opacity: 0; transition: max-height 0.44s cubic-bezier(.5,1.4,.7,1.01), opacity 0.27s linear; background: #272831e5; color:#eae5d8; border-radius: 0 0 9px 9px; margin-top:0; padding:0 18px; box-shadow: 0 1.5px 6px #0002 inset; transform: translateY(-8px);}
-    .faq-item.show .faq-a { max-height: 350px; opacity: 1; margin-top:4px; padding:14px 18px 14px 18px; transform: none;}
-    .pros { color:#baffca; font-size:1rem;}
-    .cons { color:#ff9c9c; font-size:1rem;}
-    .pros li, .cons li {margin-bottom: 7px;}
-
-    /* Glider/slider styles (copied from before) */
-    .glide-row {
-      position: relative; width: 100vw; max-width: 880px; height: 110px;
-      margin: 35px auto 0 auto; overflow: hidden;
-      background: #161920; border-radius: 10px; box-shadow: 0 2px 12px #0009;
-    }
-    .glide-track {
-      position: absolute; white-space: nowrap; left: 0; top: 0; height: 100%; display: flex; align-items: center; will-change: transform;
-    }
-    .glide-img {
-      height: 94px; margin: 0 12px; border-radius: 8px; box-shadow: 0 1.5px 8px #0007; opacity: 0.96; background: #25282c;
-    }
-    @media (max-width: 800px) {
-      .main, .faq-section { max-width: 99vw; padding-left: 4vw; padding-right: 4vw;}
-      .glide-row {max-width: 99vw; height: 68px;}
-      .glide-img {height: 58px;}
-    }
-    @media screen and (max-width: 500px) {
-      h1 {font-size: 1.3rem;}
-      h2 {font-size: 1.01rem;}
-    }
+  /* Responsive */
+  @media (max-width:900px) {
+    .hero-video { min-width:160px; min-height:84px; border-radius:4vw;}
+    .main-ad {font-size: 1.2rem;}
+    .lower-ad {font-size: 1.1rem;}
+    .site-wrap {margin-top:85vh;}
+  }
   </style>
 </head>
-
 <body>
-  <!-- Video Background Zoom Effect Section -->
-  <div class="video-bg-container" id="bgHero">
-    <video class="zoom-video" id="zoomVid" src="bg1.mp4" autoplay loop muted playsinline preload="auto"></video>
-    <div class="triple-videos" id="tripleVid">
-      <video src="bg1.mp4" loop autoplay muted playsinline></video>
-      <video src="bg2.mp4" loop autoplay muted playsinline></video>
-      <video src="bg3.mp4" loop autoplay muted playsinline></video>
+  <div id="hero-bg">
+    <!-- Videos: order randomized by JS -->
+    <video class="hero-video left"    src="bg1.mp4" autoplay loop muted playsinline></video>
+    <video class="hero-video center"  src="bg2.mp4" autoplay loop muted playsinline></video>
+    <video class="hero-video right"   src="bg3.mp4" autoplay loop muted playsinline></video>
+    <div class="overlay-ad main-ad" id="mainAd">
+      Hammer Steam Library Adder<br>
+      <span style="font-size:1.3rem;font-weight:400;">Unlock and unleash your Steam</span>
     </div>
-    <div class="ad-overlay" id="adText1">Hammer Steam Library Adder<br>
-      <span style="font-size:1.2rem;font-weight:400;">Unlock and unleash your Steam!</span>
-    </div>
-    <div class="ad-overlay2" id="adText2">Massive <b>75,000 games</b> and titles in your arsenal</div>
-  </div>
-
-  <!-- Main section, all your previous content integrated below -->
-  <div class="main">
-    <h1>🚀🔥 Hammer App</h1>
-    <h2>Unlock Your Entire Steam Library in One Click!</h2>
-    <ul class="features">
-      <li><b>Huge Library:</b> 75,000+ games—from new hits to classic delisted gems.</li>
-      <li><b>No Region Locks:</b> Play anywhere in the world, hassle-free!</li>
-      <li><b>Fast Downloads:</b> Blazing speeds straight from Valve’s secure servers.</li>
-      <li><b>Always Updated:</b> Tap “Update GAME” to get the latest build instantly.</li>
-      <li><b>Cloud Saves:</b> Keep your saves and achievements 100% intact.</li>
-      <li><b>Revive Classics:</b> Restore lost games with just one click.</li>
-      <li><b>Multi-Platform Support:</b> Windows, Steam Deck, ROG Ally, MSI Claw, Legion Go, and more.</li>
-      <li><b>Android Companion App:</b> Add games directly from your Android phone for ultimate convenience.</li>
-      <li><b>Upcoming Chrome Extension:</b> Easily add games with a simple "Add Game" button straight from the Steam store!</li>
-      <li><b>Easy Access:</b> No account setup needed—perfect for all gamers!</li>
-    </ul>
-    <div class="cta">
-      <a href="https://hammerwebsite12.github.io/hammersteam/" target="_blank">
-        <button class="cta-btn">Get Hammer App Now!</button>
-      </a>
-      <div class="price"><b>Just PHP 699 / \$13!</b></div>
-      <div style="font-size:1.04rem; margin-top:6px; color:#aaffbc;">
-        No more waiting, no more limits!
-      </div>
-    </div>
-    <!-- Video Player -->
-    <div class="video-wrap">
-      <iframe src="https://streamable.com/e/i3nad1" allowfullscreen></iframe>
-    </div>
-
-    <!-- FAQ Section -->
-    <div class="faq-section">
-      <h2 class="faq-title">❓ Frequently Asked Questions</h2>
-      <div class="faq-list">
-        <div class="faq-item">
-          <button class="faq-q">Is Hammer App safe and legal?</button>
-          <div class="faq-a">
-            Absolutely! Hammer downloads directly from Valve’s servers using your Steam credentials. There’s no piracy, no server spoofing, and your login info never goes to us!
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="faq-q">Will my Steam achievements and saves work?</button>
-          <div class="faq-a">
-            Yes—Hammer fully supports Steam Cloud and achievements. Everything stays synced and up-to-date.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="faq-q">Can I use Hammer App anywhere?</button>
-          <div class="faq-a">
-            Yes, there are no region locks! Play and restore games worldwide.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="faq-q">What platforms are supported?</button>
-          <div class="faq-a">
-            Hammer runs on Windows, Steam Deck, ROG Ally, MSI Claw, Legion Go, and more. There’s also an Android companion app.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="faq-q">Do I need a subscription?</button>
-          <div class="faq-a">
-            No subscription needed! Just a one-time payment of PHP 699 or \$13.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="faq-q">Can I add games while on mobile?</button>
-          <div class="faq-a">
-            Yes! The Android app lets you add games on the go, and the upcoming Chrome extension will let you add games in 1 click from the Steam store.
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Pros and Cons Section -->
-    <div class="faq-section" style="margin-top:36px;">
-      <h2 class="faq-title">✨ Pros & Cons</h2>
-      <div class="faq-list">
-        <div class="faq-item">
-          <button class="faq-q">Show Pros</button>
-          <div class="faq-a">
-            <ul class="pros">
-              <li>✔️ Huge library (75,000+ games, including delisted gems)</li>
-              <li>✔️ No region locks, play anywhere</li>
-              <li>✔️ Fast downloads via Valve's servers</li>
-              <li>✔️ Always up to date with 1 click</li>
-              <li>✔️ Steam Cloud support (saves & achievements stay intact)</li>
-              <li>✔️ Revives classics and lost titles</li>
-              <li>✔️ Multi-platform (Windows, Steam Deck, ROG Ally, etc.)</li>
-              <li>✔️ Mobile companion app + upcoming Chrome extension</li>
-              <li>✔️ Easy, no account needed</li>
-              <li>✔️ One-time price, no subscriptions</li>
-            </ul>
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="faq-q">Show Cons</button>
-          <div class="faq-a">
-            <ul class="cons">
-              <li>❌ Windows/Linux required for main app</li>
-              <li>❌ No Mac/iOS version (yet)</li>
-              <li>❌ You need your own Steam account with licenses</li>
-              <li>❌ Some DRM-protected games may have extra steps to restore</li>
-              <li>❌ Delisted games availability depends on your Steam ownership</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div><!-- end .main -->
-
-  <!-- Gliding Game Gallery (bottom) -->
-  <div class="glide-row">
-    <div class="glide-track" id="track1">
-      <img src="1st.jpg" class="glide-img" alt="Collage">
-      <img src="1st.jpg" class="glide-img" alt="Collage">
-    </div>
-  </div>
-  <div class="glide-row">
-    <div class="glide-track" id="track2">
-      <img src="2nd.jpg" class="glide-img" alt="Strip">
-      <img src="2nd.jpg" class="glide-img" alt="Strip">
-    </div>
-  </div>
-  <div class="glide-row">
-    <div class="glide-track" id="track3">
-      <img src="2025-07-31 13_27_07-GeForce NOW _ The Next Generation in Cloud Gaming _ NVIDIA.png" class="glide-img" alt="Promo">
-      <img src="2025-07-31 13_27_07-GeForce NOW _ The Next Generation in Cloud Gaming _ NVIDIA.png" class="glide-img" alt="Promo">
+    <div class="overlay-ad lower-ad" id="lowerAd">
+      Massive <b>75,000 games</b> and titles in your arsenal
     </div>
   </div>
 
-  <!-- JS for scroll-based video bg/FAQ/collapsible/glider -->
+  <div class="site-wrap">
+    <!-- Replace this demo content with your full landing page -->
+    <h1>Welcome to Hammer Steam Library Adder</h1>
+    <p style="text-align:center;max-width:450px;margin:0 auto 35px auto;font-size:1.149rem;color:#fff;">
+      Instantly unlock your entire Steam library — no limits, no region locks, just play.
+    </p>
+    <!-- ...Your MAIN PAGE CONTENT goes here... -->
+  </div>
+
   <script>
-    // Hero video animation
-    const videoList=["bg1.mp4","bg2.mp4","bg3.mp4"];
-    const rand = Math.floor(Math.random()*3);
-    const vid = document.getElementById("zoomVid");
-    vid.src = videoList[rand];
-    vid.style.transform = "scale(1.18)";
-
-    const triple = document.getElementById("tripleVid");
-    triple.style.opacity = 0;
-    const ad1 = document.getElementById("adText1");
-    const ad2 = document.getElementById("adText2");
-    let trig = false;
-
-    window.addEventListener('scroll', function() {
-      if(window.scrollY > 120 && !trig){
-        trig = true;
-        vid.style.transform = "scale(0.64) translateY(-9vh)";
-        ad1.style.opacity = 0;
-        triple.style.opacity = 1;
-        document.getElementById("bgHero").classList.add("show-triple");
-        setTimeout(()=>{ad2.style.opacity=1;},400);
-      }
+    // Randomize video positions, so any can be center
+    const vids = Array.from(document.querySelectorAll('.hero-video'));
+    const order = [0,1,2].sort(()=>Math.random()-0.5);
+    ['left','center','right'].forEach((pos,i)=>{
+      vids[order[i]].className = 'hero-video '+pos;
     });
 
-    // Glide Effect
-    const speeds = [1.17, 0.71, 0.33];
-    function glideTrack(trackId, speed) {
-      const track = document.getElementById(trackId);
-      const imgs = track.getElementsByTagName('img');
-      let x = 0;
-      function animate() {
-        x -= speed;
-        const imgWidth = imgs[0].offsetWidth + 24;
-        if (-x >= imgWidth) x += imgWidth;
-        track.style.transform = `translateX(${x}px)`;
-        requestAnimationFrame(animate);
+    // Zoom out when scrolling
+    let zoomedOut = false;
+    window.addEventListener('scroll', ()=>{
+      if(window.scrollY>80 && !zoomedOut){
+        document.getElementById('hero-bg').classList.add('zoom-all');
+        zoomedOut = true;
       }
-      animate();
-    }
-    window.onload = () => {
-      glideTrack('track1', speeds[0]);
-      glideTrack('track2', speeds[1]);
-      glideTrack('track3', speeds[2]);
-    };
-
-    // FAQ/Pros-Cons accordion
-    document.querySelectorAll('.faq-q').forEach(btn => {
-      btn.addEventListener('click', function() {
-        const item = this.parentElement;
-        item.classList.toggle('show');
-        document.querySelectorAll('.faq-item').forEach(other => {
-          if (other !== item) other.classList.remove('show');
-        });
-      });
+      if(window.scrollY<40 && zoomedOut){
+        document.getElementById('hero-bg').classList.remove('zoom-all');
+        zoomedOut = false;
+      }
     });
   </script>
 </body>
